--- a/estateProject/.env
+++ b/estateProject/.env
@@ -10,3 +10,5 @@ FIREBASE_CREDENTIALS_PATH=C:\\secrets\\real-estate-app-935a1-firebase-adminsdk-f
 FIREBASE_DEFAULT_SOUND=notification_sound
 CELERY_BROKER_URL=redis://127.0.0.1:6379/0
 CELERY_RESULT_BACKEND=redis://127.0.0.1:6379/1
+
+REDIS_URL=rediss://default:9fptkQpamXUK5IZRYdODSo6SczKD4Rfr@redis-14812.c8.us-east-1-2.ec2.cloud.redislabs.com:14812
