--- a/estateProject/Procfile
+++ b/estateProject/Procfile
@@ -1,1 +1,1 @@
-web: cd /opt/render/project/src/real_estate_backend_MAIN/estateProject && gunicorn estateProject.wsgi:application --pythonpath=/opt/render/project/src/real_estate_backend_MAIN/estateProject --log-file -
+web: gunicorn estateProject.wsgi:application --chdir=/opt/render/project/src/real_estate_backend_MAIN/estateProject --pythonpath=/opt/render/project/src/real_estate_backend_MAIN/estateProject --log-file -
