--- a/estateProject/render.yaml
+++ b/estateProject/render.yaml
@@ -3,11 +3,10 @@ services:
     name: real-estate-backend
     env: python
     buildCommand: |
-      cd /opt/render/project/src/real_estate_backend_MAIN/estateProject
       pip install --upgrade pip
       pip install -r requirements.txt
       python manage.py collectstatic --noinput
-    startCommand: gunicorn estateProject.wsgi:application --chdir=/opt/render/project/src/real_estate_backend_MAIN/estateProject --pythonpath=/opt/render/project/src/real_estate_backend_MAIN/estateProject --log-file -
+    startCommand: cd /opt/render/project/src/real_estate_backend_MAIN/estateProject && gunicorn estateProject.wsgi:application --pythonpath=/opt/render/project/src/real_estate_backend_MAIN/estateProject --log-file -
     plan: free
     envVars:
       - key: PYTHON_VERSION
