--- a/estateProject/render.yaml
+++ b/estateProject/render.yaml
@@ -6,7 +6,7 @@ services:
       pip install --upgrade pip
       pip install -r requirements.txt
       python manage.py collectstatic --noinput
-    startCommand: gunicorn estateProject.wsgi:application --chdir=./ --pythonpath=. --log-file -
+    startCommand: gunicorn estateProject.wsgi:application --chdir estateProject --workers 3 --bind 0.0.0.0:$PORT
     plan: free
     envVars:
       - key: PYTHON_VERSION
