--- a/estateProject/Procfile
+++ b/estateProject/Procfile
@@ -1,1 +1,1 @@
-web: cd /opt/render/project/src/real_estate_backend_MAIN/estateProject && gunicorn estateProject.wsgi:application --workers 3 --bind 0.0.0.0:$PORT
+web: gunicorn --chdir /opt/render/project/src/real_estate_backend_MAIN/estateProject estateProject.wsgi:application --workers 3 --bind 0.0.0.0:$PORT
