--- a/estateProject/render.yaml
+++ b/estateProject/render.yaml
@@ -3,7 +3,10 @@ services:
     name: real-estate-backend
     env: python
     buildCommand: |
-      pip install -r requirements.txt && python manage.py collectstatic --noinput
+      pip install -r requirements.txt
+      pip install dj-database-url python-dotenv
+      python manage.py collectstatic --noinput
+    releaseCommand: python manage.py migrate
     startCommand: gunicorn estateProject.wsgi:application --chdir estateProject --workers 3 --bind 0.0.0.0:$PORT
     plan: free
     envVars:
