--- a/estateProject/real_estate_app/requirements.txt
+++ b/estateProject/real_estate_app/requirements.txt
@@ -26,6 +26,7 @@ constantly==23.10.4
 cryptography==46.0.2
 cssselect2==0.8.0
 daphne==4.2.1
+dj-database-url==3.0.1
 Django==5.1.4
 django-cors-headers==4.7.0
 django-model-utils==5.0.0
