--- a/estateProject/requirements.txt
+++ b/estateProject/requirements.txt
@@ -117,9 +117,8 @@ vine==5.1.0
 wcwidth==0.2.14
 weasyprint==66.0
 webencodings==0.5.1
-whitenoise==6.6.0
-dj-database-url>=1.3.0
-python-dotenv>=1.0.0
+whitenoise==6.11.0
+dj-database-url==3.0.1
 xhtml2pdf==0.2.17
 zope.interface==8.0.1
 zopfli==0.2.3.post1
