--- a/estateProject/render.yaml
+++ b/estateProject/render.yaml
@@ -4,8 +4,7 @@ services:
     env: python
     buildCommand: |
       python -m pip install --upgrade pip
-      pip install --user -r requirements.txt
-      pip install --user dj-database-url python-dotenv
+      python -m pip install -r requirements.txt
       python manage.py collectstatic --noinput
     releaseCommand: python manage.py migrate
     startCommand: gunicorn estateProject.wsgi:application --chdir estateProject --workers 3 --bind 0.0.0.0:$PORT
