--- a/estateProject/render.yaml
+++ b/estateProject/render.yaml
@@ -4,7 +4,9 @@ services:
     env: python
     buildCommand: |
       python -m pip install --upgrade pip
-      python -m pip install -r requirements.txt
+      pip install --no-cache-dir -r requirements.txt
+      python -c "import sys; print('Python Path:', sys.path)"
+      python -c "import pkg_resources; print('Installed Packages:', [d.project_name for d in pkg_resources.working_set])"
       python manage.py collectstatic --noinput
     releaseCommand: python manage.py migrate
     startCommand: gunicorn estateProject.wsgi:application --chdir estateProject --workers 3 --bind 0.0.0.0:$PORT
