--- a/estateProject/render.yaml
+++ b/estateProject/render.yaml
@@ -8,8 +8,13 @@ services:
       python -c "import sys; print('Python Path:', sys.path)"
       python -c "import pkg_resources; print('Installed Packages:', [d.project_name for d in pkg_resources.working_set])"
       python -c "import dj_database_url; print('dj-database-url location:', dj_database_url.__file__)"
+      python manage.py check --deploy
       python manage.py collectstatic --noinput
-    releaseCommand: python manage.py migrate
+    releaseCommand: |
+      echo "Running database migrations..."
+      python manage.py showmigrations
+      python manage.py migrate --no-input
+      echo "Migrations completed."
     startCommand: gunicorn estateProject.wsgi:application --chdir estateProject --workers 3 --bind 0.0.0.0:$PORT
     plan: free
     envVars:
